# solverforge-demoscene

./: .gitignore  AGENTS.md  LICENSE  README.md
.codex-tmp/solverforge-linux/: README.md  packages.txt
planner123_01/: Cargo.toml  Makefile  README.md
planner123_01/src/: font.rs  logo.rs  main.rs  palette.rs
planner123_01/src/audio/: synth.rs
planner123_01/src/effects/: copper.rs  logo_reveal.rs  mod.rs  plasma.rs  screenshots.rs  scroll.rs  wireframe.rs
screensaver_03/: Cargo.toml  Makefile  README.md
screensaver_03/scripts/: install-linux.sh  solverforge-screensaver-launch  solverforge-screensaverctl
screensaver_03/src/: font.rs  logo.rs  main.rs  palette.rs
serio_01/: Cargo.toml  Makefile
serio_01/src/: font.rs  logo.rs  main.rs  palette.rs
serio_01/src/audio/: synth.rs
serio_01/src/effects/: dual_panel.rs  genesis.rs  mod.rs  orrery_render.rs  particles.rs  plasma.rs  score_display.rs  scroll.rs  starfield.rs
serio_01/src/orrery/: constraints.rs  harmony.rs  mod.rs  model.rs  solver.rs
serio_02/: Cargo.toml  Makefile  README.md
serio_02/src/: logo.rs  main.rs  palette.rs
serio_02/src/audio/: synth.rs
serio_02/src/effects/: commentary.rs  dual_panel.rs  genesis.rs  mod.rs  orrery_render.rs  particles.rs  plasma.rs  score_display.rs  scroll.rs  starfield.rs
serio_02/src/orrery/: constraints.rs  harmony.rs  mod.rs  model.rs  solver.rs
splice_04/: Cargo.toml  DESIGN.md  Makefile  README.md
splice_04/src/: config.rs  framebuffer.rs  main.rs  math.rs  palette.rs  render.rs  route.rs  route_plan.rs  scene.rs
splice_04/src/audio/: mod.rs  synth.rs
(+2 files in other folders)
