[package]
name = "planner123-demo"
version = "0.1.0"
edition = "2021"
description = "SolverForge Demoscene Intro for Planner123 -- FUCKING AMIGA"

[[bin]]
name = "planner123-demo"
path = "src/main.rs"

[dependencies]
# Pixel framebuffer window
minifb = "0.28"

# Audio synthesis + output
fundsp = "0.23"
cpal = "0.17"

# Procedural noise
noise = "0.9"

# Fast SIMD vector/matrix math
glam = "0.29"

# PNG decoder (for embedded screenshots)
png = "0.17"
