[package]
name = "serio-demo"
version = "0.1.0"
edition = "2021"
description = "SolverForge Demoscene: SERIO — Musica Universalis"

[[bin]]
name = "serio-demo"
path = "src/main.rs"

[dependencies]
# Pixel framebuffer window
minifb = "0.28"

# Audio synthesis + output
fundsp = "0.23"
cpal = "0.17"

# Fast SIMD vector/matrix math
glam = "0.29"

# The star of the show: SERIO incremental scoring engine
solverforge-scoring = { path = "../../solverforge-rs/crates/solverforge-scoring" }
solverforge-core = { path = "../../solverforge-rs/crates/solverforge-core" }
